# COMPARION

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docs_overview.md  plan.md  pyproject.toml  requirements.txt  sprint_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  story.md
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/schemas/: jobs.py  udm.py
app/services/: benchmarking.py  compare_service.py  job_store.py  report_service.py  semantic.py  storage.py  task_queue.py  upload_validation.py
app/static/: index.html
app/utils/: filetype.py
benchmarks/: README.md
benchmarks/expected/: rotated-scan-diagnostics.json  simple-image-diff.json
docs/: 01-architecture.md  02-unified-document-model.md  03-diff-engines.md  04-edge-cases.md  05-api-spec.md  06-testing-and-benchmarks.md  07-deployment-and-ops.md  08-implementation-backlog.md  09-poc-scope.md  10-non-functional-targets.md  11-sprint-1-execution-plan.md  12-sprint-2-task-plan.md  13-pilot-sizing-and-load-tests.md  15-ocr-adapters.md
docs/adr/: 0001-record-architecture-decisions.md  0002-normalize-before-comparing.md  (+1 more)
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
scripts/: load_test.py
tests/: test_api.py  test_easyocr.py  test_embedded_image.py  test_pdf_embedded_images.py  test_scanned_pdf.py  test_spatial_word_diff.py  test_sprint2_scan_pipeline.py
(+40 files in other folders)
