[project]
name = "comparion"
version = "0.1.0"
description = "POC backend for multi-format document comparison."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "python-multipart",
    "PyMuPDF",
    "Pillow",
    "numpy",
    "scikit-image",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "black",
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
plugins = []
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
